--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8">
 <title>KayakDoorCounty.net</title>
 <style>
- #bar {background-color: #152420;}
+ #bar {background-color: #152420;
+      height: 200%;}
  img {border: none;}
 </style>
 </head>
