i am so confused TuT

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>KayakDoorCounty.net</title>
 <style>
  #bar {background-color: #152420;
-      height: 200%;}
+      height: 200em;}
  img {border: none;}
 </style>
 </head>
