--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="utf-8">
 <title>KayakDoorCounty.net</title>
 <style>
- #bar {background-color: #152420;
-      height: 200em;}
+ #bar {background-color: #152420;}
  img {border: none;}
 </style>
 </head>
@@ -14,10 +13,10 @@
   <h1><img src="kayakdc.gif" alt="KayakDoorCounty.net" width="500" height="60"></h1>
 </header>
 <nav><span id="bar">
-  <a href="index.html"><img src="home.gif" alt="Home" width="90"></a> &nbsp;
-  <a href="tours.html"><img src="tours.gif" alt="Tours" width="90"></a> &nbsp;
-  <a href="reservations.html"><img src="reservations.gif" alt="Reservations" width="190"></a> &nbsp;
-  <a href="contact.html"><img src="contact.gif" alt="Contact" width="130"></a> &nbsp;
+  <a href="index.html"><img src="home.gif" alt="Home" width="90" height="40"></a> &nbsp;
+  <a href="tours.html"><img src="tours.gif" alt="Tours" width="90" height="40"></a> &nbsp;
+  <a href="reservations.html"><img src="reservations.gif" alt="Reservations" width="190" height="40"></a> &nbsp;
+  <a href="contact.html"><img src="contact.gif" alt="Contact" width="130" height="40"></a> &nbsp;
 </span></nav>
 <main>
 <h2>Your next adventure is only a paddle away ....</h2>
